devopsdemos/k8sfiles/onens.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: rcloud
  labels:
    name: onepage
