devopsdemos/k8sfiles/onepage-ingclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"IngressClass","metadata":{"annotations":{},"name":"nginx"},"spec":{"controller":"nginx.org/ingress-controller"}}
  creationTimestamp: "2021-10-06T15:04:42Z"
  generation: 1
  name: nginx
  resourceVersion: "17023355"
  uid: 638a84cd-cd0b-47ec-b783-884a35316bbd
spec:
  controller: nginx.org/ingress-controller
