devopsdemos/k8sfiles/onepage-ns.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: onepage
  labels:
    name: onepage
