devopsdemos/k8sfiles/onepage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: onepage
  namespace: onepage
  labels:
    app: onepage
spec:
  ports:
    - port: 80
  selector:
    app: onepage
    tier: frontend
  type: ClusterIP
