devopsdemos/k8sfiles/onepageweb.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: rcloud
  labels:
    name: onepage
---
apiVersion: v1
kind: Service
metadata:
  name: onepage
  namespace: rcloud
  labels:
    app: onapage
spec:
  ports:
    - port: 80
  selector:
    app: onepage
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepage
  namespace: rcloud
  labels:
    app: onepage
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: onepage
  template:
    metadata:
      labels:
        app: onepage
        tier: frontend
    spec:
      containers:
        - image: redoosolutions/pythonscripts:latest
          name: onepage
          imagePullPolicy: Always
          #command: [ "echo", "SUCCESS" ]
          securityContext:
            privileged: true
            runAsUser: 0
          ports:
            - containerPort: 80
              name: onepage
          volumeMounts:
          - name: onepage
            mountPath: /usr/local/apache2/htdocs
          imagePullSecrets:
          - name: myregistrykey
      volumes:
      - name: onepage
        persistentVolumeClaim:
          claimName: onepage
