devopsdemos/k8sfiles/onepage-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onepage-ingress
  namespace: onepage
spec:
  tls:
  - hosts: 
     - onepage.spantreeng.com
    secretName: sttls
  rules:
  - host: onepage.spantreeng.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onepage
            port: 
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: onepage
spec:
  controller: nginx.org/ingress-controller
